Fix for commit explicitly set z-index on app-content, fix overlap from navigation
https://github.com/owncloud/core/commit/71e5bc180399e75af7b67b4187c19d94b5586a5f
we need a higher z-index for #controls, if not the user not see the controls of an app!

--- a/core/css/styles.css
+++ b/core/css/styles.css
@@ -294,7 +294,7 @@ input[type="submit"].enabled {
 	padding: 0;
 	margin: 0;
 	background-color: rgba(255, 255, 255, .95);
-	z-index: 50;
+	z-index: 125;
 	-webkit-user-select: none;
 	-moz-user-select: none;
 	-ms-user-select: none;
